--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: swage
+application: sqmager
 version: 1
 runtime: python
 api_version: 1
@@ -14,5 +14,5 @@ handlers:
 - url: /
   script: upload.py
 
-- url: /swage
-  script: swage.py
+- url: /convert
+  script: convert.py
