--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,9 @@ handlers:
 - url: /stylesheets
   static_dir: stylesheets
 
+- url: /static
+  static_dir: static
+
 - url: /
   script: upload.py
 
